[package]
name = "my-axum-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
serde = { version = "1.0.183", features = ["derive"] }
shaku = { version = "0.6.1", features = ["thread_safe"] }
shaku_axum = "0.4.0"
thiserror = "1.0.45"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[workspace]
members = [".", "migration"]
